# okayu-pp-fi

./: .gitmodules  Cargo.toml  README.md  build.sh
bindings/: AkatsukiPPFFI.cs  akatsuki_pp_ffi.h  akatsuki_pp_ffi.py
src/: lib.rs
tests/: c_bindings.rs  csharp_bindings.rs  py_bindings.rs
